--- a/Editor/Editor.asmdef
+++ b/Editor/Editor.asmdef
@@ -4,10 +4,10 @@
     "references": [
         "GUID:d35b0935137438e728a4652ce39ed9ee"
     ],
-    "includePlatforms": [],
-    "excludePlatforms": [
+    "includePlatforms": [
         "Editor"
     ],
+    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
